--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ feed.xml
 # HTML files
 **/index.html
 !files/**/index.html
+!specs/conical-gradient/index.html
 !mocks/**/index.html
 404.html
 blog/tags/*
