Update project stats

--- a/data/projects.json
+++ b/data/projects.json
@@ -11,10 +11,10 @@
 			"launch": "https://lea.verou.me/2022/06/releasing-colorjs/",
 			"repo": "color-js/color.js",
 			"npm": "colorjs.io",
-			"repo_stars": 1610,
-			"repo_stars_formatted": 1610,
-			"npm_downloads": 1622520,
-			"npm_downloads_formatted": "1.6 M",
+			"repo_stars": 1698,
+			"repo_stars_formatted": 1698,
+			"npm_downloads": 2682558,
+			"npm_downloads_formatted": "2.7 M",
 			"innovation": "Possibly the first entirely color space agnostic JS library, pioneered several API innovations.",
 			"impact": "Used to generate figures and examples for several CSS specifications and influenced the [Color API](https://github.com/wicg/color-api)",
 			"@context": "https://schema.org/",
@@ -30,8 +30,8 @@
 			"repo": "leaverou/md-block",
 			"type": "lib",
 			"featured": 0,
-			"repo_stars": 290,
-			"repo_stars_formatted": 290,
+			"repo_stars": 295,
+			"repo_stars_formatted": 295,
 			"size": "minor",
 			"impact_rating": 0
 		},
@@ -45,8 +45,8 @@
 			"repo": "leaverou/parsel",
 			"type": "lib",
 			"featured": 0,
-			"repo_stars": 364,
-			"repo_stars_formatted": 364,
+			"repo_stars": 376,
+			"repo_stars_formatted": 376,
 			"size": "minor",
 			"impact_rating": 2,
 			"impact": "- Developed to aid Web Almanac’s analysis, and used to this day.\n- Used by Google’s Puppeteer project"
@@ -76,8 +76,8 @@
 			"repo": "leaverou/css.land",
 			"type": "app",
 			"featured": 0,
-			"repo_stars": 215,
-			"repo_stars_formatted": 215,
+			"repo_stars": 216,
+			"repo_stars_formatted": 216,
 			"size": "minor",
 			"impact_rating": 0
 		},
@@ -107,7 +107,7 @@
 			"type": "lib",
 			"featured": 1,
 			"impact": "Mavo’s innovations led to the publication of [several peer-reviewed research papers](https://lea.verou.me/publications/#research) and 3 Masters theses.",
-			"repo_stars": 2809,
+			"repo_stars": 2818,
 			"repo_stars_formatted": "2.8 K",
 			"innovation": "* Hassle-free remote storage, simply by providing a URL, the rest is taken care for you.\n* A formula language with several features that make it easier for novices.\n* Removes the need to think about data modeling: novices generate their data schemas by simply designing their UI and annotating it\n* Editing interface that is largely automatically generated to follow the UI",
 			"size": "major",
@@ -123,7 +123,7 @@
 			"date": "2015-12",
 			"type": "lib",
 			"featured": 0,
-			"repo_stars": 2382,
+			"repo_stars": 2384,
 			"repo_stars_formatted": "2.4 K",
 			"impact_rating": 0
 		},
@@ -179,13 +179,16 @@
 			"description": "Ultra lightweight, customizable, simple autocomplete widget with zero dependencies. ",
 			"launch": "https://lea.verou.me/2015/02/awesomplete-2kb-autocomplete-with-zero-dependencies/",
 			"repo": "leaverou/awesomplete",
+			"npm": "awesomplete",
 			"date": "2015-02",
 			"type": "lib",
 			"featured": 0,
-			"repo_stars": 6929,
+			"repo_stars": 6932,
 			"repo_stars_formatted": "6.9 K",
 			"impact_rating": 0,
-			"impact": "Featured on Github’s weekly Github Explore newsletter when it launched."
+			"impact": "Featured on Github’s weekly Github Explore newsletter when it launched.",
+			"npm_downloads": 5006387,
+			"npm_downloads_formatted": "5.0 M"
 		},
 		{
 			"url": "https://dpi.lv",
@@ -197,8 +200,8 @@
 			"date": "2013-06",
 			"type": "app",
 			"featured": 0,
-			"repo_stars": 746,
-			"repo_stars_formatted": 746,
+			"repo_stars": 748,
+			"repo_stars_formatted": 748,
 			"impact_rating": 0
 		},
 		{
@@ -241,10 +244,10 @@
 			"type": "lib",
 			"featured": 2,
 			"impact": "Used in a number of high profile websites like [Mozilla Developer Network](https://developer.mozilla.org/), Google’s [web.dev](https://web.dev/), [Sitepoint](https://www.sitepoint.com/), [Smashing Magazine](http://smashingmagazine.com), [A List Apart](http://alistapart.com), [CSS Tricks](http://css-tricks.com) and many others. Over [8M downloads weekly on npm](https://www.npmjs.com/package/prismjs) and over [1bn cumulative downloads since its launch](https://npm-stat.com/charts.html?package=prismjs&from=2012-01-01).",
-			"repo_stars": 11808,
+			"repo_stars": 11948,
 			"repo_stars_formatted": "12 K",
-			"npm_downloads": 1204392482,
-			"npm_downloads_formatted": "1.2 Bn",
+			"npm_downloads": 1348897379,
+			"npm_downloads_formatted": "1.3 Bn",
 			"innovation": "* Low floor: Entirely frictionless to get started, simply drop it in your page\n* Very high ceiling: Pioneered an extensibility mechanism allowing plugins to completely change how it works\n* Pioneered a declarative, hierarchical syntax for defining language grammars that made it easy for anyone who understood regular expressions to add support for a new language, which helped getting it to 300 languages very quickly.",
 			"size": "major",
 			"impact_rating": 3
@@ -275,8 +278,8 @@
 			"type": "app",
 			"featured": 1,
 			"impact": "Was quite successful for a few years, with thousands of visitors every day. Several popular industry media like [Wired.com’s WebMonkey](http://www.webmonkey.com/2011/12/dabblet-an-interactive-css-playground-in-your-browser/), [CSS-Tricks](http://css-tricks.com/dabblet/), [Smashing Magazine](http://www.smashingmagazine.com/smashing-newsletter-issue-50/) and others wrote about Dabblet’s release. During its first month, it received more than 65Κ unique visitors, 15Κ of which during its first two days.",
-			"repo_stars": 809,
-			"repo_stars_formatted": 809,
+			"repo_stars": 810,
+			"repo_stars_formatted": 810,
 			"innovation": "* Pioneered a distributed serverless architecture using almost entirely client-side code, with Github Gists as a storage backend.\n* Its inline previewers for various value types predate similar features in today's editors.",
 			"size": "major",
 			"impact_rating": 2
@@ -291,7 +294,7 @@
 			"date": "2011-10",
 			"type": "app",
 			"featured": 0,
-			"repo_stars": 2578,
+			"repo_stars": 2579,
 			"repo_stars_formatted": "2.6 K",
 			"size": "minor",
 			"impact_rating": 0
@@ -306,7 +309,7 @@
 			"date": "2011-10",
 			"type": "lib",
 			"featured": 0,
-			"repo_stars": 3838,
+			"repo_stars": 3837,
 			"repo_stars_formatted": "3.8 K",
 			"innovation": "Used feature detection for almost everything instead of hardcoded lists, allowing it to remain extremely lightweight and always up-to-date regardless of its version. ",
 			"impact_rating": 0
@@ -351,8 +354,8 @@
 			"type": "app",
 			"featured": 1,
 			"impact": " It has been [featured in a number of books](https://www.google.com/search?q=%22css3patterns%22&tbm=bks), talks, workshops. It was used by Opera Software to fine-tune their CSS gradients implementation.",
-			"repo_stars": 1420,
-			"repo_stars_formatted": 1420,
+			"repo_stars": 1422,
+			"repo_stars_formatted": 1422,
 			"innovation": "The gallery and the corresponding blog posts started the — now widespread — practice of using hard stops in CSS gradients to easily create background patterns and other graphics.",
 			"impact_rating": 0
 		},
@@ -366,8 +369,8 @@
 			"date": "2011-09",
 			"type": "lib",
 			"featured": 0,
-			"repo_stars": 262,
-			"repo_stars_formatted": 262,
+			"repo_stars": 263,
+			"repo_stars_formatted": 263,
 			"innovation": "Uses reflection to read what methods are available and wrap them, making it generic enough that it can work with any API, no need to know anything about it in advance.",
 			"size": "minor",
 			"impact_rating": 0
@@ -446,8 +449,8 @@
 			"date": "2010-10",
 			"type": "lib",
 			"featured": 0,
-			"repo_stars": 1717,
-			"repo_stars_formatted": 1717,
+			"repo_stars": 1721,
+			"repo_stars_formatted": 1721,
 			"impact_rating": 0
 		},
 		{
