--- a/data/projects.json
+++ b/data/projects.json
@@ -10,6 +10,7 @@
 			"innovation": "The same progressive development, which is the primary benefit of live coding, but without the fumbling, delays, or mistakes that often come with it.",
 			"impact_rating": 0,
 			"url": "https://rety.verou.me",
+			"repo": "leaverou/rety",
 			"npm": "rety"
 		},
 		{
