--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "netlify dev -p 8844",
     "build:fetch": "node _build/fetch.mjs",
-    "build:css": "npx postcss \"**/*.postcss\" --base . --dir . --ext .css --config postcss.config.cjs",
     "build:html": "npx @11ty/eleventy --config=.eleventy.cjs --quiet",
-    "build": "npm run build:html && npm run build:css",
-    "watch:css": "npx postcss \"**/*.postcss\" --base . --dir . --ext .css --config postcss.config.cjs --watch",
+    "build": "npm run build:html",
     "watch:html": "npx @11ty/eleventy --config=.eleventy.cjs --watch --quiet --incremental",
     "watch": "npx concurrently -n w: npm:watch:*"
   },
@@ -38,9 +36,6 @@
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-mathjax3": "^4.3.2",
     "plur": "^5",
-    "postcss": "^8",
-    "postcss-cli": "^10",
-    "postcss-nesting": "^12",
     "reading-time": "^1.5.0"
   }
 }
