--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "netlify dev -p 8844",
     "build:fetch": "node _build/fetch.mjs",
-    "build:html": "npx @11ty/eleventy --config=.eleventy.cjs --quiet",
+    "build:html": "npx @11ty/eleventy --config=_build/eleventy.js --quiet",
     "build": "npm run build:html",
-    "watch:html": "npx @11ty/eleventy --config=.eleventy.cjs --watch --quiet --incremental",
+    "watch:html": "npx @11ty/eleventy --config=_build/eleventy.js --watch --quiet --incremental",
     "watch": "npx concurrently -n w: npm:watch:*"
   },
   "repository": {
@@ -23,19 +24,19 @@
   },
   "homepage": "https://github.com/leaverou/lea.verou.me#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0",
-    "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "concurrently": "^8.0",
-    "eleventy-plugin-embed-everything": "^1",
-    "eleventy-plugin-toc": "^1",
+    "@11ty/eleventy": "^3.0.0-alpha.14",
+    "@11ty/eleventy-plugin-rss": "^2.0.1",
+    "concurrently": "^8.2.2",
+    "eleventy-plugin-embed-everything": "^1.18.2",
+    "eleventy-plugin-toc": "^1.1.5",
     "madata": "^0.0.1-alpha.5",
-    "markdown-it": "^13.0.1",
-    "markdown-it-anchor": "^8",
-    "markdown-it-attrs": "^4",
+    "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.0.1",
+    "markdown-it-attrs": "^4.1.6",
     "markdown-it-deflist": "^3.0.0",
-    "markdown-it-footnote": "^3.0.3",
+    "markdown-it-footnote": "^4.0.0",
     "markdown-it-mathjax3": "^4.3.2",
-    "plur": "^5",
+    "plur": "^5.1.0",
     "reading-time": "^1.5.0"
   }
 }
