--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/leaverou/lea.verou.me#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0-alpha.14",
+    "@11ty/eleventy": "^3.0.0",
     "@11ty/eleventy-plugin-rss": "^2.0.1",
     "concurrently": "^8.2.2",
     "eleventy-plugin-embed-everything": "^1.18.2",
