--- a/data/projects.json
+++ b/data/projects.json
@@ -11,7 +11,9 @@
 		"url": "https://rety.verou.me",
 		"launch": "https://lea.verou.me/blog/2022/07/rety/",
 		"repo": "leaverou/rety",
-		"npm": "rety"
+		"npm": "rety",
+		"repo_stars": 396,
+		"npm_downloads": 208
 	},
 	{
 		"featured": 3,
@@ -41,7 +43,7 @@
 		"repo": "leaverou/md-block",
 		"type": "lib",
 		"featured": 0,
-		"repo_stars": 295,
+		"repo_stars": 343,
 		"size": "minor",
 		"impact_rating": 0
 	},
@@ -55,7 +57,7 @@
 		"repo": "leaverou/parsel",
 		"type": "lib",
 		"featured": 0,
-		"repo_stars": 376,
+		"repo_stars": 390,
 		"size": "minor",
 		"impact_rating": 2,
 		"impact": "- Developed to aid Web Almanac’s analysis, and used to this day.\n- Used by Google’s Puppeteer project"
@@ -84,7 +86,7 @@
 		"repo": "leaverou/css.land",
 		"type": "app",
 		"featured": 0,
-		"repo_stars": 216,
+		"repo_stars": 227,
 		"size": "minor",
 		"impact_rating": 0
 	},
@@ -129,7 +131,7 @@
 		"date": "2015-12",
 		"type": "lib",
 		"featured": 0,
-		"repo_stars": 2384,
+		"repo_stars": 2394,
 		"repo_stars_formatted": "2.4 K",
 		"impact_rating": 0
 	},
@@ -143,7 +145,7 @@
 		"date": "2015-07",
 		"type": "lib",
 		"featured": 0,
-		"repo_stars": 1272,
+		"repo_stars": 1271,
 		"size": "minor",
 		"impact_rating": 0
 	},
@@ -158,7 +160,7 @@
 		"launch": "https://lea.verou.me/2015/06/conical-gradients-today/",
 		"repo": "leaverou/conic-gradient",
 		"impact": "[Encouraged browsers to implement CSS conic gradients](https://bugs.chromium.org/p/chromium/issues/detail?id=502970). Because the polyfill also implemented the double color stop position syntax, [browsers implemented that alongside](https://chromestatus.com/feature/5712111258828800), just so the examples in the polyfill page work correctly.",
-		"repo_stars": 485,
+		"repo_stars": 488,
 		"impact_rating": 2
 	},
 	{
@@ -172,7 +174,7 @@
 		"type": "lib",
 		"featured": 0,
 		"impact": "Was apparently used so much that its custom properties appeared in [Web Almanac's analysis of the top 1000 custom property names](https://almanac.httparchive.org/en/2020/css#naming)",
-		"repo_stars": 605,
+		"repo_stars": 608,
 		"impact_rating": 2
 	},
 	{
@@ -186,7 +188,7 @@
 		"date": "2015-02",
 		"type": "lib",
 		"featured": 0,
-		"repo_stars": 6932,
+		"repo_stars": 6976,
 		"repo_stars_formatted": "6.9 K",
 		"impact_rating": 0,
 		"impact": "Featured on Github’s weekly Github Explore newsletter when it launched.",
@@ -202,7 +204,7 @@
 		"date": "2013-06",
 		"type": "app",
 		"featured": 0,
-		"repo_stars": 748,
+		"repo_stars": 764,
 		"impact_rating": 0
 	},
 	{
@@ -262,7 +264,7 @@
 		"type": "app",
 		"featured": 0,
 		"impact": "Motivated browser vendors such as [Mozilla](https://bugzilla.mozilla.org/show_bug.cgi?id=913153) or [WebKit](https://bugs.webkit.org/show_bug.cgi?id=79073) to support more CSS3 features to increase their scores on it.",
-		"repo_stars": 212,
+		"repo_stars": 215,
 		"impact_rating": 2
 	},
 	{
@@ -276,7 +278,8 @@
 		"type": "app",
 		"featured": 1,
 		"impact": "Was quite successful for a few years, with thousands of visitors every day. Several popular industry media like [Wired.com’s WebMonkey](http://www.webmonkey.com/2011/12/dabblet-an-interactive-css-playground-in-your-browser/), [CSS-Tricks](http://css-tricks.com/dabblet/), [Smashing Magazine](http://www.smashingmagazine.com/smashing-newsletter-issue-50/) and others wrote about Dabblet’s release. During its first month, it received more than 65Κ unique visitors, 15Κ of which during its first two days.",
-		"repo_stars": 810,		"innovation": "* Pioneered a distributed serverless architecture using almost entirely client-side code, with Github Gists as a storage backend.\n* Its inline previewers for various value types predate similar features in today's editors.",
+		"repo_stars": 819,
+		"innovation": "* Pioneered a distributed serverless architecture using almost entirely client-side code, with Github Gists as a storage backend.\n* Its inline previewers for various value types predate similar features in today's editors.",
 		"size": "major",
 		"impact_rating": 2
 	},
@@ -290,7 +293,7 @@
 		"date": "2011-10",
 		"type": "app",
 		"featured": 0,
-		"repo_stars": 2579,
+		"repo_stars": 2589,
 		"repo_stars_formatted": "2.6 K",
 		"size": "minor",
 		"impact_rating": 0
@@ -305,7 +308,7 @@
 		"date": "2011-10",
 		"type": "lib",
 		"featured": 0,
-		"repo_stars": 3837,
+		"repo_stars": 3814,
 		"repo_stars_formatted": "3.8 K",
 		"innovation": "Used feature detection for almost everything instead of hardcoded lists, allowing it to remain extremely lightweight and always up-to-date regardless of its version. ",
 		"impact_rating": 0
@@ -321,7 +324,7 @@
 		"type": "app",
 		"featured": 1,
 		"impact": "Featured on several [books](https://www.google.com/search?tbm=bks&q=%22cubic-bezier.com%22) and talks. Its code was at some point even [included in the Firefox browser](https://hacks.mozilla.org/2014/07/event-listeners-popup-media-sidebar-cubic-bezier-editor-more-firefox-developer-tools-episode-33/) and [Adobe's Brackets editor](https://twitter.com/brackets/status/400678387045642241)",
-		"repo_stars": 169,
+		"repo_stars": 178,
 		"impact_rating": 2
 	},
 	{
@@ -334,7 +337,7 @@
 		"date": "2011-09",
 		"type": "app",
 		"featured": 0,
-		"repo_stars": 62,
+		"repo_stars": 63,
 		"impact_rating": 0
 	},
 	{
@@ -348,8 +351,7 @@
 		"type": "app",
 		"featured": 1,
 		"impact": " It has been [featured in a number of books](https://www.google.com/search?q=%22css3patterns%22&tbm=bks), talks, workshops. It was used by Opera Software to fine-tune their CSS gradients implementation.",
-		"repo_stars": 1422,
-
+		"repo_stars": 1450,
 		"innovation": "The gallery and the corresponding blog posts started the — now widespread — practice of using hard stops in CSS gradients to easily create background patterns and other graphics.",
 		"impact_rating": 0
 	},
@@ -363,7 +365,7 @@
 		"date": "2011-09",
 		"type": "lib",
 		"featured": 0,
-		"repo_stars": 263,
+		"repo_stars": 262,
 		"innovation": "Uses reflection to read what methods are available and wrap them, making it generic enough that it can work with any API, no need to know anything about it in advance.",
 		"size": "minor",
 		"impact_rating": 0
@@ -413,7 +415,7 @@
 		"date": "2011-05",
 		"type": "lib",
 		"featured": 0,
-		"repo_stars": 70,
+		"repo_stars": 71,
 		"impact_rating": 0
 	},
 	{
@@ -439,7 +441,7 @@
 		"date": "2010-10",
 		"type": "lib",
 		"featured": 0,
-		"repo_stars": 1721,
+		"repo_stars": 1742,
 		"impact_rating": 0
 	},
 	{
