--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,13 @@ blog/tags/*
 
 # Early drafts
 # ----------------
-blog/2025/product
-blog/2025/eng-momentum
-blog/2025/text-based-formats
-blog/2025/case-study-sentiment-ui
-blog/2025/web-standards-product-hard-mode
-blog/2025/composable-web-ui
-blog/2025/phd
+blog/drafts/product
+blog/drafts/eng-momentum
+blog/drafts/text-based-formats
+blog/drafts/case-study-sentiment-ui
+blog/drafts/web-standards-product-hard-mode
+blog/drafts/composable-web-ui
+blog/drafts/phd
 
 # Sensitive info
 # ----------------
